overflow mobile fix

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,6 +5,7 @@
 html {
     min-height: 100vh;
     overflow-x: hidden;
+    width: 100vw;
 }
 
 body {
